# csv-cleaner

./: README.md  pyproject.toml
frontend/csv-viewer/: .env  package-lock.json  package.json
frontend/csv-viewer/src/: App.js  store.js
frontend/csv-viewer/src/components/: AppHeader.js  CsvFileList.js  CsvFileViewer.js  CsvUpload.js  SettingsDialog.js
frontend/csv-viewer/src/features/settings/: settingsSlice.js
src/: .env  db.sqlite3  manage.py
src/authentication/: apps.py  authentications.py
src/cleaner/: apps.py  entities.py  inferencer.py  models.py  serializers.py  settings.py  type_checker.py  urls.py  utils.py  views.py
src/cleaner/migrations/: 0001_initial.py
src/cleaner/templates/csv_cleaner/: api_documentation.html
src/config/: cfgutils.py  settings.py  urls.py
src/csv/: cheques-wines.csv
src/tests/authentication/: test_authentication.py
src/tests/cleaner/: test_cleaner.py  test_list.py  test_update.py  test_views.py
